# EMMA_Belectric_Kolitzheim_I_ems_2

./: .gitignore  script.sh
EMMA/: checksums.txt  deployment_info.yaml  entry_to_EMMA.py  pyproject.toml  user_configuration.yaml
EMMA/adapter/: device.py  device_index.py  instantiate.py
EMMA/adapter/abstract/: battery_inverter.py  battery_pack.py  battery_system.py  charger_ac.py  circuit_breaker.py  ev_station.py  io_device.py  pv_inverter.py  smart_meter.py
EMMA/adapter/battery_system/: adstec.py  battery_string.py  master_bms.py
EMMA/adapter/dummy/: dummy_inverter.py  dummy_pack.py  dummy_smart_meter.py
EMMA/adapter/ev_station/: e_mobility_topo.py  ocpp16_ev_station.py
EMMA/adapter/misc/: carbon_intensity_grid.py  diagnostic_tool.py
EMMA/adapter/smart_meter/: smart_meters.py
EMMA/api/: api_services.py  battery_system_modbus.py  battery_system_modbus_demo.py  device_modbus.py
EMMA/api/helion/: helion_mqtt.py  helion_mqtt_demo.py  helion_mqtt_demo_control.py
EMMA/api/jinko/: jinko_modbus.py  jinko_modbus_demo.py  solnet_modbus.py  solnet_modbus_demo.py
EMMA/api/misc/: sunspec_modbus.py
EMMA/core/: battery_ageing.py  class_EMS.py  class_logs.py  geophysics.py  microgrid.py  microgrid_branch.py  microgrid_node.py  periodic_computations.py  redundancy.py  scheduled_slots.py  watchdog.py
EMMA/shared/: configuration.py  defaults.py  enums.py  models.py  validation.py
EMMA/utils/: communication.py  ems.py  files.py  logger.py  misc.py  packages.py  profiling.py  systemctl.py  threads.py  timetools.py  typed_paths.py
EMMA/variant/: EMMA_online.py
(+124 files in other folders)
